Get dog by ID
